--- a/docroot/themes/custom/site/src/styles/theme/components/_page-elements.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_page-elements.scss
@@ -19,6 +19,13 @@
 }
 // Font colors
 
+.search-button {
+
+  .icon {
+    font-size: 24px;
+  }
+}
+
 $font-light: #aaa;
 $font-pale: #fff;
 $font-dark: #000;
