--- a/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
@@ -61,7 +61,7 @@ view_mode ? view_mode|clean_class,
                                     <!-- Begin - time period -->
                                     <div class="boxy boxy--time-period">
                                         <div class="boxy__heading">
-                                            <h2 class="boxy__heading__title heading-h4">{{ 'Period' | trans }}</h2>
+                                            <h2 class="boxy__heading__title heading-h4">{{ 'Course start' | trans }}</h2>
                                         </div>
 
                                         <div class="boxy__body">
