--- a/docroot/themes/custom/site/templates/node/full/node--event.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--event.html.twig
@@ -51,7 +51,7 @@ view_mode ? view_mode|clean_class,
                                     <!-- Begin - time period -->
                                     <div class="boxy boxy--time-period">
                                         <div class="boxy__heading">
-                                            <h2 class="boxy__heading__title heading-h4">{{ "Period" | trans }}</h2>
+                                            <h2 class="boxy__heading__title heading-h4">{{ "Event start" | trans }}</h2>
                                         </div>
 
                                         <div class="boxy__body">
