--- a/docroot/themes/custom/site/templates/taxonomy-term/radio-selection/taxonomy-term--vih-class--radio-selection.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/radio-selection/taxonomy-term--vih-class--radio-selection.html.twig
@@ -37,4 +37,4 @@
         <div class="col-xs-12 col-sm-3">
             {{ content['description'] }}
         </div>
-        <div class="col-xs-12 col-sm-3">
+        <div class="col-xs-12 col-sm-3 selection-buttons">
