--- a/docroot/themes/custom/site/src/styles/theme/components/sectioned/_content.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/sectioned/_content.scss
@@ -21,10 +21,14 @@
 // --------------------------------------------------
 
 .sectioned--content {
+  background-color: transparent;
+
+  @include sectioned-skewed-mixin-angle-bottom($body-bg, $xs-sectioned-skewed-angle-height);
 
   .sectioned__inner {
     padding-top: 0;
-    padding-bottom: floor( ( ( 1px * $xs-sectioned-skewed-angle-height ) + $xs-sectioned-inner-spacing ) );
+    padding-bottom: 30px;
+    //padding-bottom: floor( ( ( 1px * $xs-sectioned-skewed-angle-height ) + $xs-sectioned-inner-spacing ) );
   }
 }
 
@@ -46,9 +50,10 @@
 @media #{$breakpoint-tablet-and-up} {
 
   .sectioned--content {
+    @include sectioned-skewed-mixin-angle-bottom($body-bg, $sm-sectioned-skewed-angle-height);
 
     .sectioned__inner {
-      padding-bottom: floor( ( ( 1px * $sm-sectioned-skewed-angle-height ) + $sm-sectioned-inner-spacing ) );
+      //padding-bottom: floor( ( ( 1px * $sm-sectioned-skewed-angle-height ) + $sm-sectioned-inner-spacing ) );
     }
   }
 }
@@ -60,9 +65,10 @@
 @media #{$breakpoint-desktop-and-up} {
 
   .sectioned--content {
+    @include sectioned-skewed-mixin-angle-bottom($body-bg, $md-sectioned-skewed-angle-height);
 
     .sectioned__inner {
-      padding-bottom: floor( ( ( 1px * $md-sectioned-skewed-angle-height ) + $md-sectioned-inner-spacing ) );
+      //padding-bottom: floor( ( ( 1px * $md-sectioned-skewed-angle-height ) + $md-sectioned-inner-spacing ) );
     }
   }
 }
@@ -74,9 +80,10 @@
 @media #{$breakpoint-large-desktop-and-up} {
 
   .sectioned--content {
+    @include sectioned-skewed-mixin-angle-bottom($body-bg, $lg-sectioned-skewed-angle-height);
 
     .sectioned__inner {
-      padding-bottom: floor( ( ( 1px * $lg-sectioned-skewed-angle-height ) + $lg-sectioned-inner-spacing ) );
+      //padding-bottom: floor( ( ( 1px * $lg-sectioned-skewed-angle-height ) + $lg-sectioned-inner-spacing ) );
     }
   }
 }
