--- a/docroot/themes/custom/site/src/styles/theme/components/sectioned/_skewed.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/sectioned/_skewed.scss
@@ -10,8 +10,6 @@
 // Variables
 // --------------------------------------------------
 
-$sectioned-skew-angle: 4deg;
-
 // Colors
 $sectioned-skewed-background-color-white: #fff;
 $sectioned-skewed-background-color-light-gray: #ecf2f4;
@@ -29,24 +27,44 @@ $lg-sectioned-skewed-angle-height: 180; // In pixels
 // Mixins
 // --------------------------------------------------
 
-@mixin sectioned-skewed-mixin-background-color($background-color, $height: 100) {
-  //padding-top: ($height * 1px);
-  padding-bottom: ($height * 1px);
-
-  background-color: $background-color;
+@mixin sectioned-skewed-mixin-angle-top($background-color, $height: 100) {
+  margin-top: ($height * 1px);
 
   @include angled-edge('outside top', 'upper right', $background-color, $height);
-  @include angled-edge('inside bottom', 'lower left', $background-color, $height);
+}
+
+@mixin sectioned-skewed-mixin-angle-bottom($background-color, $height: 100) {
+  margin-bottom: ($height * 1px);
+
+  @include angled-edge('outside bottom', 'lower left', $background-color, $height);
+}
+
+@mixin sectioned-skewed-mixin($background-color, $height: 100) {
+
+  .sectioned--skewed-angle-top {
+    @include sectioned-skewed-mixin-angle-top($background-color, $height);
+  }
+
+  .sectioned--skewed-angle-bottom {
+    @include sectioned-skewed-mixin-angle-bottom($background-color, $height);
+  }
 
   .sectioned__inner {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    background-color: $background-color;
   }
 }
 
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
+
+.sectioned--skewed {
+
+  .sectioned__inner {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
 
 // --------------------------------------------------
 // Variants
@@ -68,7 +86,7 @@ $lg-sectioned-skewed-angle-height: 180; // In pixels
     display: block;
     content: "";
     min-height: 100%;
-    background-color: #fff;
+    //background-color: #fff;
     z-index: -1;
 
     @include backface-visibility(hidden);
@@ -87,26 +105,34 @@ $lg-sectioned-skewed-angle-height: 180; // In pixels
   }
 }
 
+.sectioned--skewed--background-image {
+  margin-top: floor( ( 0 - ($xs-sectioned-skewed-angle-height * 1px) ) );
+  margin-bottom: floor( ( 0 - ($xs-sectioned-skewed-angle-height * 1px) ) );
+
+  padding-top: ($xs-sectioned-skewed-angle-height * 1px);
+  padding-bottom: ($xs-sectioned-skewed-angle-height * 1px);
+}
+
 .sectioned--skewed--background-color {
 
   &.sectioned--skewed--background-color-white {
-    @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-white, $xs-sectioned-skewed-angle-height);
+    @include sectioned-skewed-mixin($sectioned-skewed-background-color-white, $xs-sectioned-skewed-angle-height);
   }
 
   &.sectioned--skewed--background-color-light-gray {
-    @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-light-gray, $xs-sectioned-skewed-angle-height);
+    @include sectioned-skewed-mixin($sectioned-skewed-background-color-light-gray, $xs-sectioned-skewed-angle-height);
   }
 
   &.sectioned--skewed--background-color-gray {
-    @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-gray, $xs-sectioned-skewed-angle-height);
+    @include sectioned-skewed-mixin($sectioned-skewed-background-color-gray, $xs-sectioned-skewed-angle-height);
   }
 
   &.sectioned--skewed--background-color-primary {
-    @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-primary, $xs-sectioned-skewed-angle-height);
+    @include sectioned-skewed-mixin($sectioned-skewed-background-color-primary, $xs-sectioned-skewed-angle-height);
   }
 
   &.sectioned--skewed--background-color-secondary {
-    @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-secondary, $xs-sectioned-skewed-angle-height);
+    @include sectioned-skewed-mixin($sectioned-skewed-background-color-secondary, $xs-sectioned-skewed-angle-height);
   }
 }
 
@@ -126,26 +152,34 @@ $lg-sectioned-skewed-angle-height: 180; // In pixels
 // Tablet - only
 @media #{$breakpoint-tablet-only} {
 
+  .sectioned--skewed--background-image {
+    margin-top: floor( ( 0 - ($sm-sectioned-skewed-angle-height * 1px) ) );
+    margin-bottom: floor( ( 0 - ($sm-sectioned-skewed-angle-height * 1px) ) );
+
+    padding-top: ($sm-sectioned-skewed-angle-height * 1px);
+    padding-bottom: ($sm-sectioned-skewed-angle-height * 1px);
+  }
+
   .sectioned--skewed--background-color {
 
     &.sectioned--skewed--background-color-white {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-white, $sm-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-white, $sm-sectioned-skewed-angle-height);
     }
 
     &.sectioned--skewed--background-color-light-gray {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-light-gray, $sm-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-light-gray, $sm-sectioned-skewed-angle-height);
     }
 
     &.sectioned--skewed--background-color-gray {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-gray, $sm-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-gray, $sm-sectioned-skewed-angle-height);
     }
 
     &.sectioned--skewed--background-color-primary {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-primary, $sm-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-primary, $sm-sectioned-skewed-angle-height);
     }
 
     &.sectioned--skewed--background-color-secondary {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-secondary, $sm-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-secondary, $sm-sectioned-skewed-angle-height);
     }
   }
 }
@@ -156,26 +190,34 @@ $lg-sectioned-skewed-angle-height: 180; // In pixels
 // Desktop - only
 @media #{$breakpoint-desktop-only} {
 
+  .sectioned--skewed--background-image {
+    margin-top: floor( ( 0 - ($md-sectioned-skewed-angle-height * 1px) ) );
+    margin-bottom: floor( ( 0 - ($md-sectioned-skewed-angle-height * 1px) ) );
+
+    padding-top: ($md-sectioned-skewed-angle-height * 1px);
+    padding-bottom: ($md-sectioned-skewed-angle-height * 1px);
+  }
+
   .sectioned--skewed--background-color {
 
     &.sectioned--skewed--background-color-white {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-white, $md-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-white, $md-sectioned-skewed-angle-height);
     }
 
     &.sectioned--skewed--background-color-light-gray {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-light-gray, $md-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-light-gray, $md-sectioned-skewed-angle-height);
     }
 
     &.sectioned--skewed--background-color-gray {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-gray, $md-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-gray, $md-sectioned-skewed-angle-height);
     }
 
     &.sectioned--skewed--background-color-primary {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-primary, $md-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-primary, $md-sectioned-skewed-angle-height);
     }
 
     &.sectioned--skewed--background-color-secondary {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-secondary, $md-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-secondary, $md-sectioned-skewed-angle-height);
     }
   }
 }
@@ -183,26 +225,34 @@ $lg-sectioned-skewed-angle-height: 180; // In pixels
 // Large desktop - and up
 @media #{$breakpoint-large-desktop-and-up} {
 
+  .sectioned--skewed--background-image {
+    margin-top: floor( ( 0 - ($lg-sectioned-skewed-angle-height * 1px) ) );
+    margin-bottom: floor( ( 0 - ($lg-sectioned-skewed-angle-height * 1px) ) );
+
+    padding-top: ($lg-sectioned-skewed-angle-height * 1px);
+    padding-bottom: ($lg-sectioned-skewed-angle-height * 1px);
+  }
+
   .sectioned--skewed--background-color {
 
     &.sectioned--skewed--background-color-white {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-white, $lg-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-white, $lg-sectioned-skewed-angle-height);
     }
 
     &.sectioned--skewed--background-color-light-gray {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-light-gray, $lg-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-light-gray, $lg-sectioned-skewed-angle-height);
     }
 
     &.sectioned--skewed--background-color-gray {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-gray, $lg-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-gray, $lg-sectioned-skewed-angle-height);
     }
 
     &.sectioned--skewed--background-color-primary {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-primary, $lg-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-primary, $lg-sectioned-skewed-angle-height);
     }
 
     &.sectioned--skewed--background-color-secondary {
-      @include sectioned-skewed-mixin-background-color($sectioned-skewed-background-color-secondary, $lg-sectioned-skewed-angle-height);
+      @include sectioned-skewed-mixin($sectioned-skewed-background-color-secondary, $lg-sectioned-skewed-angle-height);
     }
   }
 }
