VI-107 adding confirmation page and order editing possibility

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-thank-you-page.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-thank-you-page.html.twig
@@ -1,12 +1,14 @@
-<h3>
-  {{ "Tak for din tilmelding!"|t }}
-</h3>
-<br>
+<div class="container">
+  <h3>
+    {{ "Tak for din tilmelding!"|t }}
+  </h3>
+  <br>
 
-<div class="row">
-  <div class="col-xs-12 tilmeldings-knap">
-    <a href="{{ url('<front>') }}" class="btn-arrow">
-      {{ "Tilbage til forside"|t }}
-    </a>
+  <div class="row">
+    <div class="col-xs-12 tilmeldings-knap">
+      <a href="{{ url('<front>') }}" class="btn-arrow">
+        {{ "Tilbage til forside"|t }}
+      </a>
+    </div>
   </div>
 </div>
