--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-error-page.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-error-page.html.twig
@@ -1,12 +1,14 @@
-<br>
-   <h3>
+<div class="container">
+  <br>
+  <h3>
     {{ "Noget gik galt!"|t }}
-</h3>
-<br>
-<div class="row">
-    <div class="col-xs-12 tilmeldings-knap">
-        <a href="{{ url('<front>') }}" class="btn-arrow">
-            {{ "Tilbage til forside"|t }}
-        </a>
-    </div>
+  </h3>
+  <br>
+  <div class="row">
+      <div class="col-xs-12 tilmeldings-knap">
+          <a href="{{ url('<front>') }}" class="btn-arrow">
+              {{ "Tilbage til forside"|t }}
+          </a>
+      </div>
+  </div>
 </div>
