--- a/docroot/themes/custom/site/templates/node/full/node--event.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--event.html.twig
@@ -93,18 +93,36 @@ view_mode ? view_mode|clean_class,
                     </div>
                 </div>
 
-                <!-- Begin - action button -->
-                <div class="partial partial--action-button">
-                    <div class="partial__body">
-                        <div class="text-center">
-                            <a href="{{ url('vih_subscription.event_order_create', {'event': node.id}) }}"
-                               class="btn btn-primary">
-                                {{ "Participate" | trans }}
-                            </a>
+                {% if content.isActive%}
+                  {% if(content.acceptsMoreSubscription) %}
+                    <!-- Begin - action button -->
+                    <div class="partial partial--action-button">
+                        <div class="partial__body">
+                            <div class="text-center">
+                                <a href="{{ url('vih_subscription.event_order_create', {'event': node.id}) }}"
+                                   class="btn btn-primary">
+                                    {{ "Participate" | trans }}
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!-- End - action button -->
+                    <!-- End - action button -->
+                  {% else %}
+                    <div class="partial partial--action-button">
+                      <div class="partial__body">
+                        {{ "No more available places" | trans }}
+                      </div>
+                    </div>
+                  {% endif %}
+                {% else %}
+                  <div class="partial partial--action-button">
+                    <div class="partial__body">
+                      {{ "This event is cancelled" | trans }}
+                    </div>
+                  </div>
+                {% endif %}
+
+
 
                 {# Begin - teacher #}
                 {% if content.field_vih_cource_contact_person %}
