--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -26,33 +26,33 @@
 
                 {% if page.banner %}
                     {% block banner %}
-                        <div class="banner">
-                            {{ page.banner }}
-                        </div>
+                        {{ page.banner }}
                     {% endblock %}
                 {% endif %}
 
             {% else %}
 
                 {% if node.field_page_main_image.value or node.field_vih_course_image.value %}
-                    <div class="banner banner--small">
-                        <div class="banner__inner">
 
-                            {# Begin - image #}
-                            {% if node.field_page_main_image.value %}
-                                <img src="{{ node.field_page_main_image.entity.fileuri | image_style('banner_small') }}" alt="">
-                            {% elseif node.field_vih_course_image.value %}
-                                <img src="{{ node.field_vih_course_image.entity.fileuri | image_style('banner_small') }}" alt="">
-                            {% endif %}
-                            {# End - image #}
+                    {# Begin - image #}
+                    {% if node.field_page_main_image.value %}
+                        {% set banner_background_image = node.field_page_main_image.entity.fileuri | image_style('banner_small') %}
+                    {% elseif node.field_vih_course_image.value %}
+                        {% set banner_background_image = node.field_vih_course_image.entity.fileuri | image_style('banner_small') %}
+                    {% endif %}
+                    {# End - image #}
 
-                            <div class="banner__body">
-                                <div class="container">
+                    <div class="sectioned sectioned--banner sectioned--banner--small sectioned--background-image" style="background-image: url({{ banner_background_image }})">
+                        <div class="sectioned__inner">
+                            <div class="container">
+                                <div class="sectioned__heading">
+
                                     {% if node.title.value %}
-                                        <h1 class="banner__heading__title">{{ node.title.value }}</h1>
+                                        <h1 class="sectioned__heading__title">{{ node.title.value }}</h1>
                                     {% elseif page['#title'] %}
-                                        <h1 class="banner__heading__title">{{ page['#title'] }}</h1>
+                                        <h1 class="sectioned__heading__title">{{ page['#title'] }}</h1>
                                     {% endif %}
+
                                 </div>
                             </div>
                         </div>
