--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_description.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_description.scss
@@ -116,74 +116,34 @@
 // --------------------------------------------------
 
 // Mobile - and up
-@media #{$breakpoint-mobile-and-up} {
-
-  // Description
-  .field--name-field-description {}
-}
+@media #{$breakpoint-mobile-and-up} {}
 
 // Mobile - only
-@media #{$breakpoint-mobile-only} {
-
-  // Description
-  .field--name-field-description {}
-}
+@media #{$breakpoint-mobile-only} {}
 
 // Tablet - and up
-@media #{$breakpoint-tablet-and-up} {
-
-  // Description
-  .field--name-field-description {}
-}
+@media #{$breakpoint-tablet-and-up} {}
 
 // Tablet - only
-@media #{$breakpoint-tablet-only} {
-
-  // Description
-  .field--name-field-description {}
-}
+@media #{$breakpoint-tablet-only} {}
 
 // Desktop - and up
-@media #{$breakpoint-desktop-and-up} {
-
-  // Description
-  .field--name-field-description {}
-}
+@media #{$breakpoint-desktop-and-up} {}
 
 // Desktop - only
-@media #{$breakpoint-desktop-only} {
-
-  // Description
-  .field--name-field-description {}
-}
+@media #{$breakpoint-desktop-only} {}
 
 // Large desktop - and up
-@media #{$breakpoint-large-desktop-and-up} {
-
-  // Description
-  .field--name-field-description {}
-}
+@media #{$breakpoint-large-desktop-and-up} {}
 
 // Print
-@media print {
-
-  // Description
-  .field--name-field-description {}
-}
+@media print {}
 
 // Touch
-.touchevents {
-
-  // Description
-  .field--name-field-description {}
-}
+.touchevents {}
 
 // No touch
-.no-touchevents {
-
-  // Description
-  .field--name-field-description {}
-}
+.no-touchevents {}
 
 // --------------------------------------------------
 // Mixins
