--- a/docroot/themes/custom/site/src/styles/theme/components/boxy/_single-class-groups.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/boxy/_single-class-groups.scss
@@ -1,9 +1,9 @@
 // |--------------------------------------------------------------------------
-// | Link
+// | Single class groups
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .field--name-field-link
+// | - .boxy--single-class-groups
 // |
 
 // --------------------------------------------------
@@ -11,92 +11,44 @@
 // --------------------------------------------------
 
 // --------------------------------------------------
+// Mixins
+// --------------------------------------------------
+
+@mixin boxy-single-class-groups-mixin() {}
+
+// --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
-// Link
-.field--name-field-link {
+.boxy--single-class-groups {
 
-  a {
-    @extend .btn;
+  .boxy__body {
+    padding: 0;
+  }
+
+  .panel-heading {
+    position: relative;
+  }
+
+  .panel-title {
+
+    &:before {
+      position: absolute;
+
+      top: 0;
+      left: 0;
+      bottom: 0;
+
+      width: 5px;
+
+      content: "";
+    }
   }
 }
 
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
-
-// Background image
-.sectioned--skewed--background-image {
-
-  // Link
-  .field--name-field-link {
-
-    a {
-      @extend .btn-primary;
-    }
-  }
-}
-
-// White
-.sectioned--skewed--background-color-white {
-
-  // Link
-  .field--name-field-link {
-
-    a {
-      @extend .btn-primary;
-    }
-  }
-}
-
-// Light gray
-.sectioned--skewed--background-color-light-gray {
-
-  // Link
-  .field--name-field-link {
-
-    a {
-      @extend .btn-primary;
-    }
-  }
-}
-
-// Gray
-.sectioned--skewed--background-color-gray {
-
-  // Link
-  .field--name-field-link {
-
-    a {
-      @extend .btn-primary;
-    }
-  }
-}
-
-// Primary
-.sectioned--skewed--background-color-primary {
-
-  // Link
-  .field--name-field-link {
-
-    a {
-      @extend .btn-default;
-    }
-  }
-}
-
-// Secondary
-.sectioned--skewed--background-color-secondary {
-
-  // Link
-  .field--name-field-link {
-
-    a {
-      @extend .btn-primary;
-    }
-  }
-}
 
 // --------------------------------------------------
 // Responsive
@@ -131,10 +83,3 @@
 
 // No touch
 .no-touchevents {}
-
-// --------------------------------------------------
-// Mixins
-// --------------------------------------------------
-
-// Link mixin
-@mixin field--name-mixin-field-link() {}
