--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_loader.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_loader.scss
@@ -1,7 +1,11 @@
-@import '1-column-action-centered';
-@import 'list-of-news-teasers';
-@import 'video';
-@import '_paragraph-type-file';
-@import '_paragraph-type-teacher-class-description';
-@import '_paragraph-type-user-quote';
-@import '_paragraph-type-vih-single-class-group';
+@import "1-column-action-centered";
+@import "list-of-news-teasers";
+@import "long-course-list";
+@import "class-groups-accordion";
+@import "video";
+
+// Files below needs to be cleaned up
+@import "_paragraph-type-file";
+@import "_paragraph-type-teacher-class-description";
+@import "_paragraph-type-user-quote";
+@import "_paragraph-type-vih-single-class-group";
