--- a/docroot/themes/custom/site/templates/paragraphs/paragraph--vih-single-class-group.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/paragraph--vih-single-class-group.html.twig
@@ -6,24 +6,39 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 ]
 %}
 <div{{ attributes.addClass(classes) }}>
-    <div class="container">
-        <div class="panel-group">
-            <div class="panel panel-default white-border-bottom" data-toggle="buttons">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        {% set accordion_random_id = random() %}
-                        <a class="accordion-toggle " data-toggle="collapse" href="#vih-single-class-group-{{ accordion_random_id }}" aria-expanded="true">
-                            {{ content.field_vih_scg_group_title }}
-                        </a>
-                    </h4>
-                </div>
 
-                <div id="vih-single-class-group-{{ accordion_random_id }}" class="panel-collapse collapse in" aria-expanded="true">
-                    <div class="panel-body">
-                        {{ content.field_vih_scg_classes }}
-                    </div>
-                </div>
+    {% set accordion_random_id = random() %}
+
+    <!-- Begin - panel -->
+<div class="panel panel-default">
+
+        <!-- Begin - heading -->
+        <div class="panel-heading" id="heading-{{ accordion_random_id }}">
+            <h4 class="panel-title heading-h5">
+                <a role="button" data-toggle="collapse"
+                   data-parent="#accordion"
+                   href="#collapse-{{ accordion_random_id }}"
+                   aria-expanded="true"
+                   aria-controls="collapse-{{ accordion_random_id }}">
+
+                    {{ content.field_vih_scg_group_title }}
+                </a>
+            </h4>
+        </div>
+        <!-- End - heading -->
+
+        <!-- Begin - body -->
+        <div id="collapse-{{ accordion_random_id }}"
+             class="panel-collapse collapse" role="tabpanel"
+             aria-labelledby="heading-{{ accordion_random_id }}">
+
+            <div class="panel-body">
+                {{ content.field_vih_scg_classes }}
             </div>
         </div>
+        <!-- End - body -->
+
     </div>
+    <!-- End - panel -->
+
 </div>
